--- a/app/src/main/res/layout/activity_help.xml
+++ b/app/src/main/res/layout/activity_help.xml
@@ -22,7 +22,17 @@
             android:layout_gravity="center"
             android:layout_weight="1"
             android:src="@drawable/home_icon"
-            android:contentDescription="Home" />
+            android:contentDescription="Home Icon"/>
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="2"
+            android:text="Setup"
+            android:textAlignment="center"
+            android:textColor="@color/black"
+            android:textSize="36sp"
+            android:textStyle="bold" />
 
         <ImageView
             android:id="@+id/help_button"
@@ -74,7 +84,7 @@
     <TextView
         android:id="@+id/helptext2"
         android:layout_width="370dp"
-        android:layout_height="112dp"
+        android:layout_height="138dp"
         android:layout_marginTop="8dp"
         android:fontFamily="@font/open_sans"
         android:text="@string/instruction2"
