--- a/app/src/main/res/layout/activity_help.xml
+++ b/app/src/main/res/layout/activity_help.xml
@@ -52,6 +52,7 @@
         android:textColor="@color/black"
         android:textSize="48sp"
         android:textStyle="bold"
+        android:fontFamily="@font/open_sans"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/header" />
@@ -60,20 +61,21 @@
         android:id="@+id/helptext1"
         android:layout_width="374dp"
         android:layout_height="73dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="20dp"
         android:fontFamily="@font/open_sans"
+        android:textFontWeight="600"
         android:text="@string/instruction1"
         android:textColor="@color/black"
         android:textSize="25sp"
-        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.486"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/title" />
 
     <ImageView
         android:id="@+id/imageView3"
-        android:layout_width="105dp"
-        android:layout_height="98dp"
+        android:layout_width="90dp"
+        android:layout_height="90dp"
         android:layout_marginTop="4dp"
         android:layout_marginEnd="14dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -87,10 +89,10 @@
         android:layout_height="138dp"
         android:layout_marginTop="8dp"
         android:fontFamily="@font/open_sans"
+        android:textFontWeight="600"
         android:text="@string/instruction2"
         android:textColor="@color/black"
         android:textSize="25sp"
-        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.56"
         app:layout_constraintStart_toStartOf="parent"
@@ -98,8 +100,8 @@
 
     <ImageView
         android:id="@+id/imageView5"
-        android:layout_width="127dp"
-        android:layout_height="110dp"
+        android:layout_width="105dp"
+        android:layout_height="105dp"
         android:layout_marginTop="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -111,11 +113,11 @@
         android:layout_width="369dp"
         android:layout_height="146dp"
         android:layout_marginTop="8dp"
+        android:textFontWeight="600"
         android:fontFamily="@font/open_sans"
         android:text="@string/instruction3"
         android:textColor="@color/black"
         android:textSize="25sp"
-        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.609"
         app:layout_constraintStart_toStartOf="parent"
